# user_interface_rqt_plugin

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
include/user_interface_rqt_plugin/: RobotController.h  popup.h  real_ui.h  robot_IO.h  rqt_gui_control.h
resources/: real_ui.ui
scripts/: new_plugin
src/: RobotController.cpp  popup.cpp  robot_IO.cpp  rqt_gui_control.cpp
